update search bar to use came or case